adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed vel nihil, voluptatum architecto quod iusto perspiciatis accusamus possimus iste numquam eius a aliquam quae quidem illum dignissimos ipsum tempora deserunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit hic dolores nobis esse a sed quisquam magnam repudiandae rem earum quo temporibus facere molestias aut, distinctio repellendus vero corrupti.</p>
 </body>
 </html>
