--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed vel nihil, voluptatum architecto quod iusto perspiciatis accusamus possimus iste numquam eius a aliquam quae quidem illum dignissimos ipsum tempora deserunt!</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur fugit hic dolores nobis esse a sed quisquam magnam repudiandae rem earum quo temporibus facere molestias aut, distinctio repellendus vero corrupti.</p>
+    <p>Esse parágrafo foi adicionado dentro do GitHub Desktop para LINUX! &lt;3</p>
 </body>
 </html>
